--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "react-toastify": "^8.0.0"
   },
   "devDependencies": {
@@ -25,7 +26,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.0.0",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^7.0.0",
     "electron": "^32.1.2",
     "electron-builder": "^25.0.5",
@@ -34,8 +35,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^4.0.0",
     "vite": "^5.4.1",
     "wait-on": "^6.0.0"
