--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "electron": "electron .",
     "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:3000 && electron .\"",
     "electron:build": "vite build && electron-builder"
   },
@@ -17,6 +18,7 @@
     "mousetrap-global-bind": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-force-graph": "^1.44.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^8.0.0"
