--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
+    "marked": "^14.1.2",
     "mousetrap": "^1.6.5",
     "mousetrap-global-bind": "^1.1.0",
     "react": "^18.3.1",
