--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,7 @@ pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydantic[email]
+pymongo
 pyparsing==3.1.4
 python-dotenv==1.0.1
 pytz==2024.2
