--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
+    "html-react-parser": "^5.1.18",
     "marked": "^14.1.2",
     "mousetrap": "^1.6.5",
     "mousetrap-global-bind": "^1.1.0",
