--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,13 @@
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.5",
     "react-icons": "^5.3.0",
-    "react-tabs": "^5.1.0",
-    "react-transition-group": "^4.4.5",
-    "react-router-dom": "^6.26.2",
-    "react-toastify": "^8.0.0",
     "react-markdown": "^8.0.3",
-    "turndown": "^7.1.1",
-    "react-simplemde-editor": "^5.0.0"
+    "react-router-dom": "^6.27.0",
+    "react-simplemde-editor": "^5.0.0",
+    "react-tabs": "^5.1.0",
+    "react-toastify": "^8.0.0",
+    "react-transition-group": "^4.4.5",
+    "turndown": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
